# d2grid

./: .gitignore  README.md  main.py  pyproject.toml  settings_model.py  sources.py  utils.py
.github/workflows/: release-publish.yml
d2grid/: generator.py  main.py  settings_model.py  sources.py
src/d2grid/: main.py
src/d2grid/generator/: grid_generator.py  settings_model.py
src/d2grid/sources/: __init__.py
src/d2grid/sources/attr/: __init__.py  source.py
src/d2grid/sources/empty/: __init__.py
src/d2grid/sources/file/: source.py
src/d2grid/sources/inline/: __init__.py
src/d2grid/sources/spectral/: source.py
src/d2grid/sources/stratz/: model.py  source.py
