[project]
name = "d2grid"
version = "0.1.0"
description = "Hero grid generator for Dota 2"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
]

[project.scripts]
d2grid = "d2grid.main:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
